   
===========
Changes log  
===========

- @version-full@ (@release-date@)
    - Bug fixed
       - Basic Fix for content negotiation regarding input entities.
         Reported by Thierry Templier.


- 2.1 Release Candidate 3 (02/15/2012)
    - Bug fixed
       - Fixed guice groupId. Reported by Kristoffer Gronowski.
       - Relaxed content type header parsing in case of a trailing 
         semicolon. Reported by Jean-Baptiste Dusseaut.

- 2.1 Release Candidate 2 (01/15/2012)
    - Bug fixed
       - Fixed the JAX-RS extension that did not introspect the 
         interfaces and parent classes of resource classes.
         Reported and contributed by Shaun Elliott.
       - On the client-side, a challenge response with a raw value 
         defined wasn't taken into account if a helper was missing.
         Refactored engine's AuthenticatorHelper to move common 
         logic to the AuthenticatorUtils class.
         Reported by Alex Milowski.
       - Fixed POM dependency on Apache HTTP Client 4.1.1.
         Reported by Dejan Lozanovic.
       - Fixed potential NPE in StrictConneg.
       - Fixed configuration of the default application's outbound, 
         when the application is not hosted by a Component.
         Reported by Klaus-Peter Schlotter.
    - API changes
       - Added generic value type to NamedValue interface.
       - Added ByteArrayRepresentation to org.restlet.representation
         Suggested by Jerome Idylle.
       - Added constructor from characters arrays in the
         StringRepresentation class.
       - Added constructors to ClientResource taking only a request
         object (prototype) and no (last) response.
       - Added EmfRepresentation#createEmfXmlResource(...) method
         and write(EObject, OutputStream) method.
         Suggested in part by Bryan Hunt.
    - Misc
       - Updated XStream to version 1.4.1
       - Updated Jettison to version 1.3
       - Lowered level of log messages when socket shutdown and close